k8s/expiration.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
spec:
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: quasimodo147/expiration:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
