k8s/auth-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth-depl
  ports:
    - port: 3000
      targetPort: 3000
