k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-depl
  template:
    metadata:
      labels:
        app: auth-depl
    spec:
      containers:
        - name: auth-depl
          image: quasimodo147/auth-svc:latest
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth-depl
  ports:
    - port: 4000
      targetPort: 4000
