k8s/expiration-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  selector:
    matchLabels:
      app: expiration-redis-depl
  template:
    metadata:
      labels:
        app: expiration-redis-depl
    spec:
      containers:
      - name: expiration-redis-depl
        image: redis
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis-depl
  ports:
    - port: 6379
      targetPort: 6379
