k8s/mongo-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-auth
spec:
  selector:
    matchLabels:
      app: mongo-auth
  template:
    metadata:
      labels:
        app: mongo-auth
    spec:
      containers:
      - name: mongo-auth
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-auth-srv
spec:
  selector:
    app: mongo-auth
  ports:
    - port: 27017
      targetPort: 27017
