k8s/rabbit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-depl
spec:
  selector:
    matchLabels:
      app: rabbit-depl
  template:
    metadata:
      labels:
        app: rabbit-depl
    spec:
      containers:
        - name: rabbit-depl
          image: rabbitmq:3-management
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5672

---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-srv
spec:
  selector:
    app: rabbit-depl
  ports:
    - port: 5672
      targetPort: 5672
